Fixed z-index button style

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -296,7 +296,7 @@
             right: 10px;
             width: 50px;
             height: 50px;
-            z-index: 999;
+            z-index: 99;
             background: var(--font-color);
             border-radius: 50%;
             & > svg {
